# aftershave

./: .gitignore  Cargo.toml  README.md  flake.nix  toolchain.toml
src/: lib.rs  main.rs
