[package]
name = "aftershave"
version = "0.0.1"
edition = "2021"

[lib]
name = "aftershave_lib"
path = "src/lib.rs"
# crate-type = ["cdylib"]

[[bin]]
name = "aftershave_bin"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.140"

[dependencies.zarrs]
version = "0.19.2"
default-features = false
features = ["filesystem"]

